array , object and loop

--- a/5_array.html
+++ b/5_array.html
@@ -2,13 +2,17 @@
 
     var myArray=['apple','banana','jackfruit'];
 
-        console.log(myArray[0]);
-        console.log(myArray[1]);
-        console.log(myArray[2]);
+        console.log(myArray);
 
-    var myArraymix=[1,'banana','jackfruit',12.5];
-        console.log(myArraymix[0]);
-        console.log(myArraymix[1]);
-        console.log(myArraymix[2]);
-        console.log(myArraymix[3]);
+
+    var myArraymix=[1012,'banana','jackfruit',12.5];
+        console.log(myArraymix);
+ 
+
+    var arrayObj=new Array('ele1');
+    arrayObj.push("ele2");//add item at end of array
+    console.log(arrayObj);
+    arrayObj.pop();
+    console.log(arrayObj);//remove last item from array
+
 </script>
